add delivery and pickup to products with certain tag

--- a/assets/product.scss
+++ b/assets/product.scss
@@ -189,6 +189,10 @@ $desk: 1100px;
   margin-bottom: 10px;
 }
 
+.selector-wrapper + .selector-wrapper {
+  display: none;
+}
+
 .payment-icons {
   margin-top: 20px;
 }
