--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -196,7 +196,11 @@
     <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer></script>
     <script src="{{ 'customer_area.js' | shopify_asset_url }}" defer></script>
   {% endif %}
-  <script src="{{ 'jquery.js' | asset_url }}" defer></script>
+  {%- if template.name == 'product' -%}
+    <script src="{{ 'jquery-1.11.0.min.js' | asset_url }}" defer></script>
+  {%- else -%}
+    <script src="{{ 'jquery.js' | asset_url }}" defer></script>
+  {%- endif -%}
   <script src="{{ 'modernizr.min.js' | asset_url }}" defer></script>
   <script src="{{ 'theme.js' | asset_url }}" defer></script>
   <script src="{{ 'sidebar-cart.js' | asset_url }}" defer></script>
