--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -288,7 +288,7 @@
       <div id="EmptyCart">
         <h1>{{ 'cart.general.title' | t }}</h1>
         <p class="cart--empty-message">{{ 'cart.general.empty' | t }}</p>
-        <p class="cart--continue-message">{{ 'cart.general.continue_browsing_html' | t: link: routes.all_products_collection_url }}</p>
+        <p class="cart--continue-message">{{ 'cart.general.continue_browsing_html' | t: link: routes.root_url }}</p>
         <p class="cart--cookie-message">{{ 'cart.general.cookies_required' | t }}</p>
       </div>
     {% endif %}
