--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -42,9 +42,9 @@
   {%- comment -%}{%- if template.name == 'product' and product.tags contains 'pallet' -%}
     {%- assign use_pallet = true -%}
   {%- endif -%}{%- endcomment -%}
-  <link rel="stylesheet" href="{{ 'theme.scss.css' | asset_url }}">
-  <link rel="stylesheet" href="{{ 'header.scss.css' | asset_url }}">
-  <link rel="stylesheet" href="{{ 'forms.scss.css' | asset_url }}">
+  <link rel="stylesheet" media="screen" href="{{ 'theme.scss.css' | asset_url }}">
+  <link rel="stylesheet" media="screen" href="{{ 'header.scss.css' | asset_url }}">
+  <link rel="stylesheet" rel="preload" as="style" href="{{ 'forms.scss.css' | asset_url }}" onload="this.onload=null;this.rel='stylesheet'">
   {%- if template.name == 'account' or template.name == 'order' or template.name == 'addresses' -%}
     <link rel="stylesheet" href="{{'account.scss.css' | asset_url}}">
   {%- endif -%}
@@ -231,22 +231,6 @@
     loadPreloadedStyles();
   </script>
 
-  <!-- begin olark code -->
-  <script type="text/javascript">
-    ;(function(o,l,a,r,k,y){if(o.olark)return;
-      r="script";y=l.createElement(r);r=l.getElementsByTagName(r)[0];
-      y.async=1;y.src="//"+a;r.parentNode.insertBefore(y,r);
-      y=o.olark=function(){k.s.push(arguments);k.t.push(+new Date)};
-      y.extend=function(i,j){y("extend",i,j)};
-      y.identify=function(i){y("identify",k.i=i)};
-      y.configure=function(i,j){y("configure",i,j);k.c[i]=j};
-      k=y._={s:[],t:[+new Date],c:{},l:a};
-      })(window,document,"static.olark.com/jsclient/loader.js");
-      /* Add configuration calls below this comment */
-      olark.identify('7324-564-10-6259');
-  </script>
-  <!-- end olark code -->
-
   {%- if template.name != 'index' and template.name != 'collection' and template.name != 'account'-%}
     {%- render 'bold-common' -%}
   {%- endif -%}
@@ -254,5 +238,6 @@
     {%- render 'bold-ro-init' -%}
     {%- render 'bold-subscription-widget' -%}
   {%- endif -%}
+  <script src="{{ 'third-party-code.js' | asset_url }}" defer></script>
 </body>
 </html>
